[package]
name = "bolarity-runtime"
version = "0.1.0-dev"
authors.workspace = true
description = "Bolarity node runtime."
edition.workspace = true
build = "build.rs"
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec = { workspace = true, default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { workspace = true, default-features = false, features = ["derive", "serde"] }
static_assertions = { workspace = true }
log = { workspace = true }
serde_json = { features = ["alloc", "arbitrary_precision"], workspace = true }

# pallet-asset-conversion: turn on "num-traits" feature
primitive-types = { workspace = true, default-features = false, features = ["codec", "num-traits", "scale-info"] }

# primitives
sp-authority-discovery = { workspace = true, default-features = false, features = ["serde"] }
sp-consensus-babe = { workspace = true, default-features = false, features = ["serde"] }
beefy-primitives = { workspace = true, default-features = false }
grandpa-primitives = { workspace = true, default-features = false, features = ["serde"] }
sp-block-builder = { workspace = true, default-features = false }
sp-genesis-builder = { default-features = false, workspace = true }
sp-inherents = { workspace = true, default-features = false }
node-primitives = { workspace = true, default-features = false }
sp-mixnet = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false, features = ["serde"] }
sp-std = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false, features = ["serde"] }
sp-staking = { workspace = true, default-features = false, features = ["serde"] }
sp-storage = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-statement-store = { workspace = true, default-features = false, features = ["serde"] }
sp-version = { workspace = true, default-features = false, features = ["serde"] }
sp-io = { workspace = true, default-features = false }

# frame dependencies
frame-executive = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false }
frame-benchmarking-pallet-pov = { workspace = true, default-features = false }
frame-metadata-hash-extension = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false, features = ["experimental", "tuples-96"] }
frame-system = { workspace = true, default-features = false }
frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
frame-election-provider-support = { workspace = true, default-features = false }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
frame-try-runtime = { workspace = true, default-features = false, optional = true }
pallet-alliance = { workspace = true, default-features = false }
pallet-asset-conversion = { workspace = true, default-features = false }
pallet-asset-conversion-ops = { workspace = true, default-features = false }
pallet-asset-rate = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
pallet-authority-discovery = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-babe = { workspace = true, default-features = false }
pallet-bags-list = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-beefy = { workspace = true, default-features = false }
pallet-beefy-mmr = { workspace = true, default-features = false }
pallet-bounties = { workspace = true, default-features = false }
pallet-broker = { workspace = true, default-features = false }
pallet-child-bounties = { workspace = true, default-features = false }
pallet-collective = { workspace = true, default-features = false }
pallet-contracts = { workspace = true, default-features = false }
pallet-conviction-voting = { workspace = true, default-features = false }
pallet-core-fellowship = { workspace = true, default-features = false }
pallet-democracy = { workspace = true, default-features = false }
pallet-election-provider-multi-phase = { workspace = true, default-features = false }
pallet-election-provider-support-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-elections-phragmen = { workspace = true, default-features = false }
pallet-example-tasks = { workspace = true, default-features = false }
pallet-fast-unstake = { workspace = true, default-features = false }
pallet-migrations = { workspace = true, default-features = false }
pallet-example-mbm = { workspace = true, default-features = false }
pallet-nis = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }
pallet-im-online = { workspace = true, default-features = false }
pallet-indices = { workspace = true, default-features = false }
pallet-identity = { workspace = true, default-features = false }
pallet-lottery = { workspace = true, default-features = false }
pallet-membership = { workspace = true, default-features = false }
pallet-message-queue = { workspace = true, default-features = false }
pallet-mixnet = { workspace = true, default-features = false }
pallet-mmr = { workspace = true, default-features = false }
pallet-multisig = { workspace = true, default-features = false }
pallet-nfts = { workspace = true, default-features = false }
pallet-nfts-runtime-api = { workspace = true, default-features = false }
pallet-nft-fractionalization = { workspace = true, default-features = false }
pallet-nomination-pools = { workspace = true, default-features = false }
pallet-nomination-pools-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-nomination-pools-runtime-api = { workspace = true, default-features = false }
pallet-offences = { workspace = true, default-features = false }
pallet-offences-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-glutton = { workspace = true, default-features = false }
pallet-preimage = { workspace = true, default-features = false }
pallet-proxy = { workspace = true, default-features = false }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
pallet-ranked-collective = { workspace = true, default-features = false }
pallet-recovery = { workspace = true, default-features = false }
pallet-referenda = { workspace = true, default-features = false }
pallet-remark = { workspace = true, default-features = false }
pallet-root-testing = { workspace = true, default-features = false }
pallet-salary = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false, features = ["historical"] }
pallet-session-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-staking = { workspace = true, default-features = false }
pallet-staking-reward-curve = { workspace = true, default-features = false }
pallet-staking-runtime-api = { workspace = true, default-features = false }
pallet-state-trie-migration = { workspace = true, default-features = false }
pallet-statement = { workspace = true, default-features = false }
pallet-scheduler = { workspace = true, default-features = false }
pallet-society = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-tips = { workspace = true, default-features = false }
pallet-treasury = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
pallet-asset-conversion-tx-payment = { workspace = true, default-features = false }
pallet-asset-tx-payment = { workspace = true, default-features = false }
pallet-skip-feeless-payment = { workspace = true, default-features = false }
pallet-transaction-storage = { workspace = true, default-features = false }
pallet-uniques = { workspace = true, default-features = false }
pallet-vesting = { workspace = true, default-features = false }
pallet-whitelist = { workspace = true, default-features = false }
pallet-tx-pause = { workspace = true, default-features = false }
pallet-safe-mode = { workspace = true, default-features = false }
pallet-parameters = { workspace = true, default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
with-tracing = ["frame-executive/with-tracing"]
std = [
	"codec/std",
	"frame-benchmarking-pallet-pov/std",
	"frame-benchmarking/std",
	"frame-election-provider-support/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"log/std",
	"node-primitives/std",
	"pallet-alliance/std",
	"pallet-asset-conversion-ops/std",
	"pallet-asset-conversion-tx-payment/std",
	"pallet-asset-conversion/std",
	"pallet-asset-rate/std",
	"pallet-asset-tx-payment/std",
	"pallet-assets/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-beefy-mmr/std",
	"pallet-beefy/std",
	"pallet-bounties/std",
	"pallet-broker/std",
	"pallet-child-bounties/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-conviction-voting/std",
	"pallet-core-fellowship/std",
	"pallet-democracy/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-election-provider-support-benchmarking?/std",
	"pallet-elections-phragmen/std",
	"pallet-example-mbm/std",
	"pallet-example-tasks/std",
	"pallet-fast-unstake/std",
	"pallet-glutton/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-lottery/std",
	"pallet-membership/std",
	"pallet-message-queue/std",
	"pallet-migrations/std",
	"pallet-mixnet/std",
	"pallet-mmr/std",
	"pallet-multisig/std",
	"pallet-nft-fractionalization/std",
	"pallet-nfts-runtime-api/std",
	"pallet-nfts/std",
	"pallet-nis/std",
	"pallet-nomination-pools-benchmarking?/std",
	"pallet-nomination-pools-runtime-api/std",
	"pallet-nomination-pools/std",
	"pallet-offences-benchmarking?/std",
	"pallet-offences/std",
	"pallet-parameters/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-ranked-collective/std",
	"pallet-recovery/std",
	"pallet-referenda/std",
	"pallet-remark/std",
	"pallet-root-testing/std",
	"pallet-safe-mode/std",
	"pallet-salary/std",
	"pallet-scheduler/std",
	"pallet-session-benchmarking?/std",
	"pallet-session/std",
	"pallet-skip-feeless-payment/std",
	"pallet-society/std",
	"pallet-staking-runtime-api/std",
	"pallet-staking/std",
	"pallet-state-trie-migration/std",
	"pallet-statement/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-tips/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-storage/std",
	"pallet-treasury/std",
	"pallet-tx-pause/std",
	"pallet-uniques/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"pallet-whitelist/std",
	"primitive-types/std",
	"scale-info/std",
	"serde_json/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"beefy-primitives/std",
	"grandpa-primitives/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-mixnet/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-statement-store/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking-pallet-pov/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-alliance/runtime-benchmarks",
	"pallet-asset-conversion-ops/runtime-benchmarks",
	"pallet-asset-conversion/runtime-benchmarks",
	"pallet-asset-rate/runtime-benchmarks",
	"pallet-asset-tx-payment/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-broker/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-core-fellowship/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-example-mbm/runtime-benchmarks",
	"pallet-example-tasks/runtime-benchmarks",
	"pallet-fast-unstake/runtime-benchmarks",
	"pallet-glutton/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-lottery/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-migrations/runtime-benchmarks",
	"pallet-mixnet/runtime-benchmarks",
	"pallet-mmr/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-nft-fractionalization/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pallet-nis/runtime-benchmarks",
	"pallet-nomination-pools-benchmarking/runtime-benchmarks",
	"pallet-nomination-pools/runtime-benchmarks",
	"pallet-offences-benchmarking/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-parameters/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-ranked-collective/runtime-benchmarks",
	"pallet-recovery/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-remark/runtime-benchmarks",
	"pallet-safe-mode/runtime-benchmarks",
	"pallet-salary/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-skip-feeless-payment/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-state-trie-migration/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-transaction-storage/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-tx-pause/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-whitelist/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
try-runtime = [
	"frame-benchmarking-pallet-pov/try-runtime",
	"frame-election-provider-support/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-alliance/try-runtime",
	"pallet-asset-conversion-ops/try-runtime",
	"pallet-asset-conversion-tx-payment/try-runtime",
	"pallet-asset-conversion/try-runtime",
	"pallet-asset-rate/try-runtime",
	"pallet-asset-tx-payment/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-beefy-mmr/try-runtime",
	"pallet-beefy/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-broker/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-conviction-voting/try-runtime",
	"pallet-core-fellowship/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-example-mbm/try-runtime",
	"pallet-example-tasks/try-runtime",
	"pallet-fast-unstake/try-runtime",
	"pallet-glutton/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-lottery/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-migrations/try-runtime",
	"pallet-mixnet/try-runtime",
	"pallet-mmr/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-nft-fractionalization/try-runtime",
	"pallet-nfts/try-runtime",
	"pallet-nis/try-runtime",
	"pallet-nomination-pools/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-parameters/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-ranked-collective/try-runtime",
	"pallet-recovery/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-remark/try-runtime",
	"pallet-root-testing/try-runtime",
	"pallet-safe-mode/try-runtime",
	"pallet-salary/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-skip-feeless-payment/try-runtime",
	"pallet-society/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-state-trie-migration/try-runtime",
	"pallet-statement/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-transaction-storage/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-tx-pause/try-runtime",
	"pallet-uniques/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-whitelist/try-runtime",
	"sp-runtime/try-runtime",
]
experimental = [
	"frame-support/experimental",
	"frame-system/experimental",
	"pallet-example-tasks/experimental",
]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]
