[package]
name = "bolarity-runtime"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
byte-slice-cast= { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
static_assertions = "1.1"

# Substrate
sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }
sp-consensus-babe = { workspace = true, default-features = false }
sp-consensus-grandpa = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-statement-store = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }
# Substrate FRAME
frame-benchmarking = { workspace = true, optional = true, default-features = false }
frame-election-provider-support = { workspace = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-system-benchmarking = { workspace = true, optional = true, default-features = false }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-babe = { workspace = true, default-features = false }
pallet-bags-list = { workspace = true, default-features = false }
pallet-balances = { workspace = true, features = ["insecure_zero_ed"], default-features = false }
pallet-collective = { workspace = true, default-features = false }
pallet-contracts = { workspace = true, default-features = false }
pallet-democracy = { workspace = true, default-features = false }
pallet-election-provider-multi-phase = { workspace = true, default-features = false }
pallet-elections-phragmen = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }
pallet-im-online = { workspace = true, default-features = false }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
pallet-membership = { workspace = true, default-features = false }
pallet-nomination-pools = { workspace = true, default-features = false }
pallet-nomination-pools-runtime-api = { workspace = true, default-features = false }
pallet-offences = { workspace = true, default-features = false }
pallet-offences-benchmarking = { workspace = true, optional = true, default-features = false }
pallet-preimage = { workspace = true, default-features = false }
pallet-scheduler = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
pallet-staking = { workspace = true, default-features = false }
pallet-staking-reward-curve = { workspace = true, default-features = false }
pallet-staking-runtime-api = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
pallet-treasury = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }
pallet-fast-unstake = { workspace = true, default-features = false }

# Frontier
fp-account = { workspace = true, features = ["serde"], default-features = false }
fp-evm = { workspace = true, features = ["serde"], default-features = false }
fp-rpc = { workspace = true, default-features = false }
fp-self-contained = { workspace = true, features = ["serde"], default-features = false }
# Frontier FRAME
pallet-base-fee = { workspace = true, default-features = false }
pallet-dynamic-fee = { workspace = true, default-features = false }
pallet-ethereum = { workspace = true, default-features = false }
pallet-evm = { workspace = true, default-features = false }
pallet-evm-chain-id = { workspace = true, default-features = false }
pallet-evm-precompile-modexp = { workspace = true, default-features = false }
pallet-evm-precompile-sha3fips = { workspace = true, default-features = false }
pallet-evm-precompile-simple = { workspace = true, default-features = false }
pallet-evm-precompile-dispatch = { workspace = true, default-features = false }
pallet-hotfix-sufficients = { workspace = true, default-features = false }

# Local Pallet
pallet-template = { path = "../pallets/template", default-features = false }
pallet-hybrid-vm = { workspace = true, default-features = false }
pallet-hybrid-vm-port = { workspace = true, default-features = false }
hp-system = { workspace = true, default-features = false}

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true, default-features = false }

[features]
default = ["std", "with-rocksdb-weights"]
with-rocksdb-weights = []
with-paritydb-weights = []
std = [
    "log/std",
    "parity-scale-codec/std",
    "scale-info/std",
    # Substrate
    "sp-api/std",
    "sp-block-builder/std",
    "sp-genesis-builder/std",
    "sp-consensus-babe/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-statement-store/std",
    "sp-version/std",
    "substrate-wasm-builder",
    # Substrate FRAME
    "frame-benchmarking/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system-benchmarking?/std",
    "pallet-authorship/std",
    "pallet-babe/std",
    "pallet-bags-list/std",
    "pallet-balances/std",
    "pallet-collective/std",
    "pallet-contracts/std",
    "pallet-democracy/std",
    "pallet-election-provider-multi-phase/std",
    "pallet-elections-phragmen/std",
    "pallet-grandpa/std",
    "pallet-im-online/std",
    "pallet-insecure-randomness-collective-flip/std",
    "pallet-membership/std",
    "pallet-nomination-pools/std",
    "pallet-nomination-pools-runtime-api/std",
    "pallet-offences/std",
    "pallet-preimage/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-staking-runtime-api/std",
    "pallet-staking/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-treasury/std",
    "pallet-utility/std",
    "pallet-fast-unstake/std",
    # Frontier
    "fp-account/std",
    "fp-evm/std",
    "fp-rpc/std",
    "fp-self-contained/std",
    # Frontier FRAME
    "pallet-base-fee/std",
    "pallet-dynamic-fee/std",
    "pallet-ethereum/std",
    "pallet-evm-chain-id/std",
    "pallet-evm-precompile-dispatch/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-sha3fips/std",
    "pallet-evm-precompile-simple/std",
    "pallet-evm/std",
    "pallet-hotfix-sufficients/std",
    # Local Pallet
    "pallet-hybrid-vm/std",
    "pallet-hybrid-vm-port/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
    "pallet-evm/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-hotfix-sufficients/runtime-benchmarks",
    "pallet-offences-benchmarking",
    "pallet-contracts/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
]
