[package]
name = "bolarity-node"
version = "0.1.0-dev"
authors.workspace = true
description = "Bolarity node implementation in Rust."
build = "build.rs"
edition.workspace = true
default-run = "bolarity-node"
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
array-bytes = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
codec = { workspace = true }
serde = { features = ["derive"], workspace = true, default-features = true }
jsonrpsee = { workspace = true, features = ["server"] }
futures = {  workspace = true }
log = { workspace = true, default-features = true }
rand = { workspace = true }

# primitives
sp-authority-discovery = { workspace = true }
sp-consensus-babe = { workspace = true }
beefy-primitives = { workspace = true }
grandpa-primitives = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
sp-keystore = { workspace = true }
sp-consensus = { workspace = true }
sp-transaction-storage-proof = { workspace = true }
sp-io = { workspace = true }
sp-mixnet = { workspace = true }
sp-mmr-primitives = { workspace = true }
sp-statement-store = { workspace = true }

# client dependencies
mmr-rpc = { workspace = true }
sc-client-api = { workspace = true }
sc-chain-spec = { workspace = true }
sc-consensus = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-statement-store = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-network-sync = { workspace = true }
sc-network-statement = { workspace = true }
sc-consensus-slots = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-babe-rpc = { workspace = true }
sc-consensus-beefy-rpc = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-rpc-spec-v2 = { workspace = true }
beefy = { workspace = true }
grandpa = { workspace = true }
mmr-gadget = { workspace = true }
sc-rpc = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-service = { workspace = true, default-features = false }
sc-telemetry = { workspace = true }
sc-executor = { workspace = true }
sc-authority-discovery = { workspace = true }
sc-mixnet = { workspace = true }
sc-sync-state-rpc = { workspace = true }
sc-sysinfo = { workspace = true }
sc-storage-monitor = { workspace = true }
sc-offchain = { workspace = true }

# frame dependencies
frame-benchmarking = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-assets = { workspace = true }
pallet-asset-conversion-tx-payment = { workspace = true }
pallet-asset-tx-payment = { workspace = true }
pallet-im-online = { workspace = true, default-features = false }
pallet-skip-feeless-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-state-trie-migration-rpc = { workspace = true }

# node-specific dependencies
bolarity-runtime = { path = "../../runtime" }
node-primitives = { path = "../primitives" }

# CLI-specific dependencies
sc-cli = { workspace = true, optional = true }
frame-benchmarking-cli = { workspace = true, optional = true }
serde_json = { workspace = true, default-features = true }

[dev-dependencies]
sc-keystore = { workspace = true }
sc-client-db = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-epochs = { workspace = true }
sc-service-test = { workspace = true }
sc-block-builder = { workspace = true }
sp-tracing = { workspace = true }
sp-blockchain = { workspace = true }
sp-crypto-hashing = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
nix = { workspace = true, features = ["signal"] }
regex = { workspace = true }
platforms = { workspace = true }
soketto = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true, features = ["macros", "parking_lot", "time"] }
tokio-util = { workspace = true, features = ["compat"] }
wait-timeout = { workspace = true }
substrate-rpc-client = { workspace = true }
pallet-timestamp = { workspace = true }
substrate-cli-test-utils = { workspace = true }

wat = { workspace = true }
frame-support = { workspace = true }
pallet-balances = { workspace = true }
pallet-contracts = { workspace = true }
pallet-glutton = { workspace = true }
pallet-sudo = { workspace = true }
pallet-treasury = { workspace = true }
pallet-transaction-payment = { workspace = true }
sp-application-crypto = { workspace = true }
pallet-root-testing = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-externalities = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
serde_json = { workspace = true, default-features = true }
scale-info = { workspace = true, features = ["derive", "serde"] }
sp-trie = { workspace = true }
sp-state-machine = { workspace = true }

[build-dependencies]
clap = { workspace = true, optional = true }
clap_complete = { workspace = true, optional = true }
frame-benchmarking-cli = { workspace = true, optional = true }
substrate-build-script-utils = { workspace = true, optional = true }
substrate-frame-cli = { workspace = true, optional = true }
sc-cli = { workspace = true, optional = true }
pallet-balances = { workspace = true }
sc-storage-monitor = { workspace = true }

[features]
default = ["cli"]
cli = [
	"clap",
	"clap_complete",
	"frame-benchmarking-cli",
	"sc-cli",
	"sc-service/rocksdb",
	"substrate-build-script-utils",
	"substrate-frame-cli",
]
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"bolarity-runtime/runtime-benchmarks",
	"pallet-asset-tx-payment/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-glutton/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-skip-feeless-payment/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"sc-client-db/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"bolarity-runtime/try-runtime",
	"pallet-asset-conversion-tx-payment/try-runtime",
	"pallet-asset-tx-payment/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-glutton/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-root-testing/try-runtime",
	"pallet-skip-feeless-payment/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"sp-runtime/try-runtime",
	"substrate-cli-test-utils/try-runtime",
]


