[package]
name = "pallet-hybrid-vm-port"
version = "0.3.0"
license = "Apache-2.0"
description = "HybridVM port pallet for HybridVM."
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = ["with-codec"], default-features = false }
ethereum-types = { workspace = true, default-features = false }
evm = { workspace = true, features = ["with-codec"], default-features = false }
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
# Substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
pallet-contracts = { workspace = true, default-features = false }
# Frontier
fp-consensus = { workspace = true, default-features = false }
fp-ethereum = { workspace = true, default-features = false }
fp-evm = { workspace = true, default-features = false }
fp-rpc = { workspace = true, default-features = false }
fp-storage = { workspace = true, default-features = false }
pallet-evm = { workspace = true, default-features = false }
# ink!
ink_env = { workspace = true, default-features = false }
#local
pallet-hybrid-vm =  { workspace = true, default-features = false }
hp-system =  { workspace = true, default-features = false }

[dev-dependencies]
byte-slice-cast= { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
libsecp256k1 = { workspace = true, features = ["static-context", "hmac"], default-features = false }
rlp = { workspace = true, default-features = false }
sha3 = { workspace = true, default-features = false }
# Substrate
pallet-balances = { workspace = true, features = ["insecure_zero_ed"], default-features = false }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false}
pallet-timestamp = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
# Frontier
fp-self-contained = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"evm/std",
	"ethereum-types/std",
	"ink_env/std",
	"rlp/std",
	"parity-scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	# Frontier
	"fp-consensus/std",
	"fp-ethereum/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-storage/std",
	"pallet-evm/std",
	"pallet-contracts/std",
	"pallet-hybrid-vm/std",
	"hp-system/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-evm/try-runtime",
	"pallet-contracts/try-runtime",
]
forbid-evm-reentrancy = ["pallet-evm/forbid-evm-reentrancy"]
